// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Comment form should close on cancel button 1`] = `[Function]`;

exports[`Comment form should open on focus 1`] = `
<DocumentFragment>
  <form
    class="mt-4"
  >
    <textarea
      class="flex w-full rounded-md border border-input bg-background px-3 py-2 text-base ring-offset-background placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 md:text-sm min-h-[100px] mb-2"
      data-testid="comment-form"
      disabled=""
      placeholder="Write your comment..."
    />
    <div
      class="mt-4 flex justify-end space-x-2"
    >
      <button
        class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 border border-input bg-background hover:bg-accent hover:text-accent-foreground h-9 rounded-md px-3"
        data-testid="comment-form-button-cancel"
        type="button"
      >
        Cancel
      </button>
      <button
        class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-primary text-primary-foreground hover:bg-primary/90 h-9 rounded-md px-3"
        data-testid="comment-form-button-submit"
      >
        Submit Message
      </button>
    </div>
    <a
      class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-primary text-primary-foreground hover:bg-primary/90 h-10 px-4 py-2 ml-auto"
      href="/sign-in?returnUrl=null"
    >
      Authorize
    </a>
  </form>
</DocumentFragment>
`;

exports[`Comment form should send message on submit 1`] = `
<DocumentFragment>
  <form
    class="mt-4"
  >
    <textarea
      class="flex w-full rounded-md border border-input bg-background px-3 py-2 text-base ring-offset-background placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 md:text-sm min-h-[100px] mb-2"
      data-testid="comment-form"
      disabled=""
      placeholder="Write your comment..."
    >
      Satisfying
    </textarea>
    <div
      class="mt-4 flex justify-end space-x-2"
    >
      <button
        class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 border border-input bg-background hover:bg-accent hover:text-accent-foreground h-9 rounded-md px-3"
        data-testid="comment-form-button-cancel"
        type="button"
      >
        Cancel
      </button>
      <button
        class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-primary text-primary-foreground hover:bg-primary/90 h-9 rounded-md px-3"
        data-testid="comment-form-button-submit"
      >
        Submit Message
      </button>
    </div>
    <a
      class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-primary text-primary-foreground hover:bg-primary/90 h-10 px-4 py-2 ml-auto"
      href="/sign-in?returnUrl=null"
    >
      Authorize
    </a>
  </form>
</DocumentFragment>
`;
